# AdventOfCode

adventofcode/: Cargo.toml
adventofcode/data/2021/day/18/: input.txt
adventofcode/data/2021/day/19/: input.txt
adventofcode/data/2021/day/23/: input.txt
adventofcode/data/2021/day/24/: input.txt
adventofcode/src/: learn_list.rs  main.rs  problem_1.rs  problem_10.rs  problem_11.rs  problem_12.rs  problem_13.rs  problem_14.rs  problem_15.rs  problem_16.rs  problem_17.rs  problem_18.rs  problem_19.rs  problem_2.rs  problem_20.rs  problem_21.rs  problem_22.rs  problem_23.rs  problem_24.rs  problem_25.rs  problem_26.rs  problem_27.rs  problem_28.rs  problem_29.rs  problem_3.rs  problem_30.rs  problem_31.rs  problem_32.rs  problem_33.rs  problem_34.rs  problem_35.rs  problem_35b.rs  problem_36.rs  problem_37.rs  problem_38.rs  problem_39.rs  problem_4.rs  problem_40.rs  problem_41.rs  problem_42.rs  (+12 more)
adventofcode_all/: Cargo.toml  README.txt
adventofcode_all/input/2015/06/: input.txt
adventofcode_all/input/2015/18/: input.txt
adventofcode_all/input/2022/: input_05.txt  input_19.txt
adventofcode_all/input/2023/: input_20.txt
adventofcode_all/src/: aoc2015_02.rs  aoc2015_06.rs  aoc2015_07.rs  aoc2015_08.rs  aoc2015_09.rs  aoc2015_11.rs  aoc2015_13.rs  aoc2015_14.rs  aoc2015_15.rs  aoc2015_16.rs  aoc2015_17.rs  aoc2015_18.rs  aoc2015_19.rs  aoc2015_20.rs  aoc2015_21.rs  aoc2015_22.rs  aoc2015_23.rs  aoc2015_24.rs  aoc2015_25.rs  aoc2016_01.rs  aoc2016_02.rs  aoc2016_03.rs  asciienum.rs  astar.rs  eznom.rs  grid.rs  hash_life.rs  lib.rs
adventofcode_all/src/pest/: aoc2016_01.pest
