[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2015_01"
path = "src/aoc2015_01.rs"

[[bin]]
name = "aoc2015_02"
path = "src/aoc2015_02.rs"

[[bin]]
name = "aoc2015_03"
path = "src/aoc2015_03.rs"

[[bin]]
name = "aoc2015_04"
path = "src/aoc2015_04.rs"

[[bin]]
name = "aoc2015_05"
path = "src/aoc2015_05.rs"

[[bin]]
name = "aoc2015_06"
path = "src/aoc2015_06.rs"

[[bin]]
name = "aoc2015_07"
path = "src/aoc2015_07.rs"

[[bin]]
name = "aoc2015_08"
path = "src/aoc2015_08.rs"

[[bin]]
name = "aoc2015_09"
path = "src/aoc2015_09.rs"

[[bin]]
name = "aoc2015_10"
path = "src/aoc2015_10.rs"

[[bin]]
name = "aoc2015_11"
path = "src/aoc2015_11.rs"

[[bin]]
name = "aoc2015_12"
path = "src/aoc2015_12.rs"

[[bin]]
name = "aoc2015_13"
path = "src/aoc2015_13.rs"

[[bin]]
name = "aoc2015_14"
path = "src/aoc2015_14.rs"

[[bin]]
name = "aoc2015_15"
path = "src/aoc2015_15.rs"

[[bin]]
name = "aoc2015_16"
path = "src/aoc2015_16.rs"

[[bin]]
name = "aoc2015_17"
path = "src/aoc2015_17.rs"

[[bin]]
name = "aoc2015_18"
path = "src/aoc2015_18.rs"

[[bin]]
name = "aoc2015_19"
path = "src/aoc2015_19.rs"

[[bin]]
name = "aoc2015_20"
path = "src/aoc2015_20.rs"

[[bin]]
name = "aoc2015_21"
path = "src/aoc2015_21.rs"

[[bin]]
name = "aoc2015_22"
path = "src/aoc2015_22.rs"

[[bin]]
name = "aoc2015_23"
path = "src/aoc2015_23.rs"

[[bin]]
name = "aoc2015_24"
path = "src/aoc2015_24.rs"


[dependencies]
nom = "7.1.0"
itertools = "0.10.3"
md5 = "0.7.0"
json = "0.12.4"
lazy_static = "1.4.0"
rand = "0.8.4"
cached = "0.30.0"
primal = "0.3.0"
