[package]
name = "advent_of_code"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent_lib"

[dependencies]
nom = "7.1.0"
itertools = "0.10.3"
md5 = "0.7.0"
json = "0.12.4"
lazy_static = "1.4.0"
rand = "0.8.4"
cached = "0.30.0"
primal = "0.3.0"
mod_exp = "1.0.1"
pest = "2.1.3"
pest_derive = "2.1.0"
anyhow = "1.0.58"
regex = "1.6.0"
once_cell = "1.14.0"
